<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:fillViewport="true">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">



    <TextView
        android:id="@+id/logoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:fontFamily="@font/aspace_light"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/login_edittext"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:layout_below="@+id/logoTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/login_edittext"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:layout_below="@+id/email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/login_btn"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_field"
        android:textColor="#ffffff"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/or"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:gravity="center_horizontal"
        android:textSize="17dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/login"
        android:textStyle="bold"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/or"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:layout_below="@id/google_signin"/>

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_account_yet"
        android:gravity="start"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:layout_below="@id/line1"
        android:textStyle="bold|italic"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_below="@id/link_signup"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:visibility="gone"/>

</RelativeLayout>
</ScrollView>
