<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">



        <TextView
            android:id="@+id/logoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:text="@string/Add_new"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:fontFamily="@font/aspace_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/topic_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/journal_title"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/login_edittext"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:layout_below="@+id/logoTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            />

        <EditText
            android:id="@+id/details_field"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/journal_detail"
            android:inputType="textMultiLine"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="top"
            android:background="@drawable/login_edittext"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:layout_below="@+id/topic_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/login_btn"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/details_field"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:visibility="gone"/>

    </RelativeLayout>
</ScrollView>
